# MH4521-Labs

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
lab1/: README.md  compare_agents.py  run.py  setup_wandb.py
lab1/agent/: agent.py  eps_agent.py  etc_agent.py  ucb_agent.py
lab1/arm/: base.py  gaussian.py
lab1/bandit/: base.py  gaussian.py
lab1/player/: ucb_player.py
