[project]
name = "mh4521-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
]

[tool.ruff]
# Rule selection:
# E: pycodestyle (style errors)
# F: Pyflakes (logical errors)
# I: isort (import sorting)
# B: flake8-bugbear (bug detection)
# UP: pyupgrade (syntax modernization)
# A: flake8-builtins (built-in shadowing)
# C4: flake8-comprehensions (comprehension best practices)
lint.select = ["E", "F", "I", "B", "UP", "A", "C4"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
]
